# generic_messenger

./: '  .gitignore  Cargo.toml  README.md  flake.nix
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: cargo-check.yml
adaptors/: Cargo.toml
adaptors/src/: discord.rs  lib.rs  network.rs  types.rs
adaptors/src/discord/: json_structs.rs  main_socket.rs  rest_api.rs  vc_socket.rs  websocket.rs
audio/: Cargo.toml
audio/src/: lib.rs
crate/audio/: Cargo.toml
crate/audio/src/: effects.rs  input.rs  lib.rs  output.rs  resample.rs  stream.rs
crate/audio/src/effects/: gain.rs  gate.rs
crate/messaging_interface/: Cargo.toml
crate/messaging_interface/src/: interface.rs  types.rs
crate/messenger_interface/: Cargo.toml
crate/messenger_interface/docs/: communication_models.md  races.md
crate/messenger_interface/src/: interface.rs  lib.rs  stream.rs  types.rs
crate/messenger_interface/src/types/: cache.rs  identifier.rs  message.rs  place.rs  rich_text.rs  user.rs
crate/overwrite_ring/: Cargo.toml
crate/overwrite_ring/src/: lib.rs
crate/steam_gns/: Cargo.toml
crate/steam_gns/src/: lib.rs
interface/discord/: Cargo.toml
interface/discord/src/: api_types.rs  downloaders.rs  gateaways.rs  gateways.rs  lazy_arc.rs  lib.rs  query.rs  rest_api.rs  rich.rs  text.rs  voice.rs
interface/discord/src/gateaways/: general.rs  polling.rs  voice.rs
interface/discord/src/gateaways/general/: events.rs  payloads.rs
interface/discord/src/gateaways/voice/: connection.rs  events.rs  gateway.rs  payloads.rs
interface/discord/src/gateways/: general.rs  polling.rs  voice.rs
interface/discord/src/gateways/general/: events.rs  payloads.rs  recording.rs  voice_state.rs
interface/discord/src/gateways/voice/: audio.rs  connection.rs  events.rs  gateway.rs  payloads.rs
interface/discord/src/gateways/voice/connection/: encryption.rs  rtp.rs
interface/discord/tests/: drop.rs
interface/steam/: Cargo.toml  VOICE_PROTOCOL.md
interface/steam/src/: api_types.rs  capture.rs  downloaders.rs  lib.rs  query.rs  rich.rs  session.rs  voice.rs
interface/steam/src/gns/: cert.rs  mod.rs  signaling.rs  transport.rs
record/: Cargo.toml
record/src/: audio.rs  auth.rs  cache.rs  components.rs  main.rs  messanger_unifier.rs  messenger_unifier.rs  pages.rs  socket.rs
record/src/components/: divider.rs  message_text.rs
record/src/pages/: chat.rs  login.rs  messenger.rs
record/src/pages/messenger/: chat.rs  contacts.rs  conversation_sidebar.rs  navbar.rs  server.rs
record_v2/: Cargo.toml
record_v2/src/: auth.rs  components.rs  events.rs  main.rs  pages.rs  state.rs
record_v2/src/components/: message_text.rs
record_v2/src/pages/: login.rs  messenger.rs
record_v2/src/pages/messenger/: chat.rs  contacts.rs  navbar.rs  sidebar.rs
widgets/: Cargo.toml
widgets/src/: divider.rs  lib.rs
