[workspace]
resolver = "2"
members = [
	"macro",
	"record_v2",
	"crate/audio",
	"crate/messenger_interface",
	"crate/overwrite_ring",
	"crate/steam_gns",
	"interface/discord",
	"interface/steam"
]
# Local fork of steam-vent (see [patch.crates-io] below); built as a patched
# dependency, not a workspace member.
exclude = ["crate/vendor/steam-vent"]

# Fork steam-vent to dump unpublished service-method payloads (VoiceChatClient.*)
# during voice-signaling capture. See interface/steam/VOICE_PROTOCOL.md.
[patch.crates-io]
steam-vent = { path = "crate/vendor/steam-vent" }

[workspace.dependencies]
# Logs
tracing = "0.1.44"
# Bitflags
bitflags = "2.11.1"
# Serilization/Deserilization
facet = "0.46.0"
# facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = "0.46.0"
# facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = "0.46.0"
# facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-pretty = "0.46.0"
# facet-pretty = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-error = "0.46.0"
# Async
asyncs-sync = "0.4.0"
futures = "0.3.32"
async-trait = "0.1.89"
# Time
chrono = "0.4"
