[package]
name = "adaptors"
version = "0.1.0"
edition = "2024"

[dependencies]
surf = "2.3.2"
async-tungstenite =  { version = "0.29.1", features = ["async-std-runtime", "async-tls"] }
serde = "1.0.216"
serde_json = "1.0.140"
serde_repr = "0.1.19"
futures = "0.3.31"
may = "0.3.49"
async-trait = "0.1.83"
macro = { path = "../macro" }
