[package]
name = "adaptors"
version = "0.1.0"
edition = "2024"

[dependencies]
surf = "2.3.2"
serde = "1.0.216"
serde_json = "1.0.140"
serde_repr = "0.1.19"
futures = "0.3.31"
futures-locks = "0.7.1"
futures-timer = "3.0.3"
async-tungstenite =  { version = "0.32.0", features = ["async-std-runtime", "async-tls"] }
smol = "2.0.2"
async-trait = "0.1.83"
macro = { path = "../macro" }
libsodium-rs = "0.2.1"

symphonia = "0.5.5"
opus = "0.3.0"

discortp = { version = "0.6.0", features = [ "discord" ] } # Don't really need it
