[package]
name = "record"
version = "0.0.1"
edition = "2024"

[dependencies]
# Tracer
tracing = { workspace = true }
tracing-subscriber = "0.3.22"
# UI
iced = { version = "0.14.0",  features = ["image", "advanced", "lazy", "sipper"] }
font-kit = "0.14.3"
# Audio
audio = { path = "../crate/audio" }
# Interface
messaging_interface = { path = "../crate/messaging_interface" }
discord = { path = "../interface/discord" }
# Parcer
nom = "8.0.0"

futures = { workspace = true }
ringbuf = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
