[package]
name = "record"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
# Tracer
tracing = { workspace = true }
tracing-subscriber = "0.3.22"
# UI
iced = { version = "0.14.0",  features = ["image", "advanced", "lazy", "sipper"] }
iced_aw = { version = "0.13.0", features = ["context_menu"] }
font-kit = "0.14.3"
# Audio
simple-audio-channels = { path = "../crate/audio" }
# Interface
messenger_interface = { path = "../crate/messenger_interface" }
discord = { path = "../interface/discord" }
# Parcer
nom = "8.0.0"

futures = { workspace = true }
# ringbuf = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
