[package]
name = "record_v2"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
# Tracer
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# UI
iced = { version = "0.14.0", features = ["image", "advanced", "lazy", "sipper"] }
iced_aw = { version = "0.13.0", features = ["context_menu", "wrap"] }
iced_palace = { version = "0.14.0", features = [] }
font-kit = "0.14.3"
# Audio
simple-audio-channels = { path = "../crate/audio" }
# Interface
messenger_interface = { path = "../crate/messenger_interface" }
discord = { path = "../interface/discord" }
steam = { path = "../interface/steam" }

futures = { workspace = true }
strum = { version = "0.28.0", features = ["derive"] }
