[package]
name = "discord"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Logs
tracing = "0.1.43"
# Async
asyncs-sync = { workspace = true }
async-trait = { workspace = true }
async-tungstenite =  { version = "0.34.0", features = ["async-std-runtime", "async-tls"] }
# Futures
futures = { workspace = true }
futures-locks = "0.7.1"
futures-timer = "3.0.3"
pin-project = "1.1.11"
# Data structs
arc-swap = "1.9.1"
dashmap = "6.1.0"
crossbeam = "0.8.4"
# Fetch
surf = "2.3.2"
percent-encoding = "2"
# Serialize/Deserialize
facet = { workspace = true }
facet-value = { workspace = true }
facet-json = { workspace = true }
facet-pretty = { workspace = true }
# Networking
smol = "2.0.2"
pnet_macros = "0.35.0"
pnet_macros_support = "0.35.0"
# Audio
simple-audio-channels = { path = "../../crate/audio", version = "0.0.1" }
opus = "0.3.1"
# Security
secure-string = "0.3.0"
libsodium-rs = "0.2.4"
davey = "0.1.3"
# Interface
messenger_interface = { path = "../../crate/messenger_interface" }
# enums
num_enum = "0.7.6"
# Bitflags
bitflags = { workspace = true }
async-fs = "2.2.0"
